--- a/package.json
+++ b/package.json
@@ -33,8 +33,8 @@
     }
   ],
   "dependencies": {
-    "coffeescript": "~2.3.1",
-    "nikita": "^0.9.1",
+    "coffeescript": "~2.3.2",
+    "nikita": "^0.9.3-alpha.2",
     "season": "^6.0.2",
     "ssh2-fs": "~0.3.6"
   },
