--- a/package.json
+++ b/package.json
@@ -14,6 +14,19 @@
     "deployment",
     "os"
   ],
+  "coffeelintConfig": {
+    "indentation": {
+      "level": "error",
+      "value": 2
+    },
+    "line_endings": {
+      "level": "error",
+      "value": "unix"
+    },
+    "max_line_length": {
+      "level": "ignore"
+    }
+  },
   "contributors": [
     {
       "name": "Cesar Berezowski",
