bootstrap: fix linux-firmware name

--- a/package.json
+++ b/package.json
@@ -41,7 +41,7 @@
       "email": "pierre@adaltas.com"
     },
     {
-      "name": "Joris nmmens",
+      "name": "Joris Rummens",
       "email": "joris@adaltas.com"
     }
   ],
